enable building on a standard JDK without included JavaFX